navbar fixed on mobile

--- a/src/styles/SearchPage/_AllResponse.scss
+++ b/src/styles/SearchPage/_AllResponse.scss
@@ -45,18 +45,22 @@
     word-wrap: break-word;
   }
 }
+
 .fixed {
-  background: white;
-  position: fixed;
-  top: 0;
-  z-index: 5;
-  padding: 0;
-  box-shadow: 0px 7px 14px -1px rgba(211, 210, 210, 1);
-  -webkit-box-shadow: 0px 7px 14px -1px rgba(211, 210, 210, 1);
-  -moz-box-shadow: 0px 7px 14px -1px rgba(211, 210, 210, 1);
-  width: 100vw;
-  transition-delay: 0.01s;
+  @media screen and (min-width: 501px) {
+    background: white;
+    position: fixed;
+    top: 0;
+    z-index: 5;
+    padding: 0;
+    box-shadow: 0px 7px 14px -1px rgba(211, 210, 210, 1);
+    -webkit-box-shadow: 0px 7px 14px -1px rgba(211, 210, 210, 1);
+    -moz-box-shadow: 0px 7px 14px -1px rgba(211, 210, 210, 1);
+    width: 100vw;
+    transition-delay: 0.01s;
+  }
 }
+
 .padding-bottom-0 {
   padding-bottom: 1rem;
   padding-top: 1rem;
